; ModuleID = '/home/carl/AnghaBench/openssl/apps/extr_ocsp.c_send_ocsp_response.c'
source_filename = "/home/carl/AnghaBench/openssl/apps/extr_ocsp.c_send_ocsp_response.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@__const.send_ocsp_response.http_resp = private unnamed_addr constant [81 x i8] c"HTTP/1.0 200 OK\0D\0AContent-type: application/ocsp-response\0D\0AContent-Length: %d\0D\0A\0D\0A\00", align 16
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*)* @send_ocsp_response to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @send_ocsp_response(i32* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca [81 x i8], align 16
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  %7 = bitcast [81 x i8]* %6 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 16 %7, i8* align 16 getelementptr inbounds ([81 x i8], [81 x i8]* @__const.send_ocsp_response.http_resp, i32 0, i32 0), i64 81, i1 false)
  %8 = load i32*, i32** %4, align 8
  %9 = icmp eq i32* %8, null
  br i1 %9, label %10, label %11

10:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %22

11:                                               ; preds = %2
  %12 = load i32*, i32** %4, align 8
  %13 = getelementptr inbounds [81 x i8], [81 x i8]* %6, i64 0, i64 0
  %14 = load i32*, i32** %5, align 8
  %15 = call i32 @i2d_OCSP_RESPONSE(i32* %14, i32* null)
  %16 = call i32 @BIO_printf(i32* %12, i8* %13, i32 %15)
  %17 = load i32*, i32** %4, align 8
  %18 = load i32*, i32** %5, align 8
  %19 = call i32 @i2d_OCSP_RESPONSE_bio(i32* %17, i32* %18)
  %20 = load i32*, i32** %4, align 8
  %21 = call i32 @BIO_flush(i32* %20)
  store i32 1, i32* %3, align 4
  br label %22

22:                                               ; preds = %11, %10
  %23 = load i32, i32* %3, align 4
  ret i32 %23
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @BIO_printf(i32*, i8*, i32) #2

declare dso_local i32 @i2d_OCSP_RESPONSE(i32*, i32*) #2

declare dso_local i32 @i2d_OCSP_RESPONSE_bio(i32*, i32*) #2

declare dso_local i32 @BIO_flush(i32*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
